# aurova_localization

./: .project  README.md
aurova_localization/: CMakeLists.txt  package.xml
ekf_fusion/: CMakeLists.txt  package.xml
ekf_fusion/cfg/: EkfFusion.cfg
ekf_fusion/include/: ekf.h  ekf_fusion_alg.h  ekf_fusion_alg_node.h
ekf_fusion/src/: ekf.cpp  ekf_fusion_alg.cpp  ekf_fusion_alg_node.cpp
ekf_loose_integration/: CMakeLists.txt  package.xml
ekf_loose_integration/cfg/: EkfLooseIntegration.cfg
ekf_loose_integration/include/: ekf_loose_integration_alg.h  ekf_loose_integration_alg_node.h
ekf_loose_integration/src/: ekf_loose_integration_alg.cpp  ekf_loose_integration_alg_node.cpp
geo_localization/: CMakeLists.txt  README.md  package.xml
geo_localization/cfg/: GeoLocalization.cfg
geo_localization/include/: geo_localization_alg.h  geo_localization_alg_node.h
geo_localization/launch/: node.launch  test.launch
geo_localization/src/: geo_localization_alg.cpp  geo_localization_alg_node.cpp
get_pose_from_tf/: CMakeLists.txt  package.xml
get_pose_from_tf/cfg/: GetPoseFromTf.cfg
get_pose_from_tf/include/: get_pose_from_tf_alg.h  get_pose_from_tf_alg_node.h
get_pose_from_tf/launch/: run_tf2pose.launch
get_pose_from_tf/src/: get_pose_from_tf_alg.cpp  get_pose_from_tf_alg_node.cpp
gps_odom_optimization/: CMakeLists.txt  README.md  package.xml
gps_odom_optimization/cfg/: GpsOdomOptimization.cfg
gps_odom_optimization/include/: ceres_structs.hpp  common_types.hpp  gps_odom_optimization_alg.h  gps_odom_optimization_alg_node.h  optimization_process.hpp
gps_odom_optimization/launch/: node.launch  test.launch
gps_odom_optimization/src/: gps_odom_optimization_alg.cpp  gps_odom_optimization_alg_node.cpp
pose_simulation/: CMakeLists.txt  package.xml
pose_simulation/cfg/: PoseSimulation.cfg
pose_simulation/include/: pose_simulation_alg.h  pose_simulation_alg_node.h
pose_simulation/src/: pose_simulation_alg.cpp  pose_simulation_alg_node.cpp
wolf_fusion/: CMakeLists.txt  package.xml
wolf_fusion/cfg/: WolfFusion.cfg
wolf_fusion/include/: wolf_fusion_alg.h  wolf_fusion_alg_node.h
wolf_fusion/src/: wolf_fusion_alg.cpp  wolf_fusion_alg_node.cpp
